# back

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  alerting.yml  alertmanager.yml  db.sqlite3  docker-compose.yml  entrypoint.sh  loki-config.yml  prometheus.yml  promtail-config.yaml  pyproject.toml  seed_tasks.py
alembic/: env.py
alembic/versions/: 1c991fe1f132_initial_schema.py  330fed83e46d_initial_schema.py  8b0ce3e6f620_create_user_and_task_tables.py
app/: config.py  database.py  logger.py  main.py  metrics.py  telemetry.py
app/api/: exception_handlers.py
app/api/v1/routers/: auth_router.py  health_router.py  recommendations_router.py  task_history_router.py  tasks_router.py  users_router.py
app/auth/: __init__.py  auth.py  jwt.py  permission.py  security.py
app/db/: base.py  init_db.py
app/db/CRUD/: CRUD_base.py  task.py  task_history.py  user.py
app/db/crud/: base.py  role.py  task.py  user.py
app/decorators/: role_decorators.py
app/enums/: task_solution_status.py  task_status.py  user_role.py
app/exceptions/: base_exception.py  task_exception.py  user_exception.py
app/middleware/: auth_middleware.py
app/models/: base.py  base_db_models.py  task.py  task_history.py  task_history_table.py  task_table.py  user.py  user_role.py  user_table.py
app/router/: model.py  tasks.py
app/schemas/: model_io.py  recomendations.py  task.py  task_history.py  update_requests.py  user.py
app/scripts/: create_admin.py
app/services/: auth_service.py  model_service.py  recommendation_service.py  task_history_service.py  task_service.py  user_service.py
app/services/translation/: glossary.py  latex_masker.py  translation_service.py
app/services/translation/providers/: base.py  ctranslate2_marian.py
app/utils/: metrics_utils.py  password_utils.py  redis_client.py
test/api_tests/: conftest.py  test_auth.py  test_task_history.py  test_tasks.py  test_users.py  test_users_security.py
test/db_tests/: conftest.py  test_task_crud_full.py  test_task_history_crud_full.py  test_user_crud.py
test/db_tests/db_CRUD_tests/: task_test.py  user_test.py
test/service_tests/: conftest.py  test_auth_service.py  test_task_history_service.py  test_task_service.py  test_user_service.py
