[tool.poetry]
name = "fastapi-backend"
version = "0.1.0"
description = "FastAPI backend for reco system"
authors = ["FlintWithBlackCrown <kbolokhov@gmail.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.12"

# веб и схема
fastapi = ">=0.116.1,<0.117.0"
uvicorn = ">=0.35.0,<0.36.0"
pydantic = { version = ">=2.11.7,<3.0.0", extras = ["email"] }
pydantic-settings = ">=2.10.1,<3.0.0"

# безопасность/утилиты
python-jose = { version = "^3.3.0", extras = ["cryptography"] }
passlib = "^1.7.4"
bcrypt = "^4.3.0"
python-dotenv = "^1.1.1"
redis = "^5.0.0"

# БД и драйверы
sqlalchemy = "^2.0.41"
asyncpg = "^0.30.0"
aiosqlite = "^0.21.0"

# наблюдаемость
prometheus-fastapi-instrumentator = "^7.1.0"
prometheus-client = "^0.22.1"
sentry-sdk = { version = "^2.33.2", extras = ["fastapi"] }

# OpenTelemetry
opentelemetry-sdk = ">=1.36.0,<2.0.0"
opentelemetry-api = ">=1.36.0,<2.0.0"
opentelemetry-exporter-otlp = ">=1.36.0,<2.0.0"
opentelemetry-instrumentation-fastapi = ">=0.57b0,<0.58"
opentelemetry-instrumentation-asgi = ">=0.57b0,<0.58"
opentelemetry-instrumentation-requests = ">=0.57b0,<0.58"
opentelemetry-instrumentation-urllib = ">=0.57b0,<0.58"
opentelemetry-instrumentation-logging = ">=0.57b0,<0.58"
opentelemetry-instrumentation-sqlalchemy = ">=0.57b0,<0.58"
opentelemetry-instrumentation-psycopg2 = ">=0.57b0,<0.58"

ctranslate2 = ">=4.6.0,<5.0.0"
langdetect = ">=1.0.9,<2.0.0"
scikit-learn = "^1.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.1"
pytest-asyncio = "^1.1.0"
pytest-cov = "^6.2.1"
httpx = "^0.27.0"
alembic = "^1.16.4"

[build-system]
requires = ["poetry-core>=1.9.0"]
build-backend = "poetry.core.masonry.api"


